@@ -14,7 +14,11 @@ Changes in 3.0.4
                 true/yes setting. This is the default.
        mode   = map ACLs to Finder UARights and UNIX mode
        From FR #73.
-    
+* FIX: Fix a possible crash in cname() where cname_mtouname calls
+       dirlookup() where the curdir is freed because the dircache
+       detected a dev/inode cache difference and evicted the object
+       from the cache. Fixes bug #498.
+
 Changes in 3.0.3
 ================
 * UPD: afpd: Increase default DSI server quantum to 1 MB
